# 0.2 (current dev)

- Allow filtering of the meta box title

# 0.1

- Initial Release